fix(mailviewer): Correct alignment of full/half height preview pane button. (#1209)

--- a/src/app/mailviewer/singlemailviewer.component.css
+++ b/src/app/mailviewer/singlemailviewer.component.css
@@ -6,12 +6,6 @@
     border-top: 1px solid darkgrey !important;
 }							       
 
-.messageHeightIcon {
-    font-size: 50px;
-    margin-left: -5px;
-    margin-right: 15px;
-}
-
 #messageHeader {
     margin-bottom: 10px;
     overflow: hidden;
